# haskell-playground

./: .gitignore  README.md  hello.hs  recap1.md
chap1/: README.md  chap1.cabal  package.yaml
chap1/app/: Main.hs
chap1/src/: Lib.hs
chap1/test/: Spec.hs
chap2/: :w  ChangeLog.md  README.md  chap2.cabal
chap2/src/: Lib.hs
chap2/test/: Spec.hs  Spec2.hs
chap3/: .gitignore  ChangeLog.md  README.md  chap3.cabal
chap3/test/: Spec.hs
chap4/: .gitignore  ChangeLog.md  README.md  chap4.cabal
chap4/app/: Main.hs
chap4/src/: Lib.hs  Product.hs  User.hs
chap4/test/: LibSpec.hs  Spec.hs
