cabal-version: 2.2
name:           chap1
version:        0.1.0.0
build-type:     Simple

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/chap1

-- nice trick https://cabal.readthedocs.io/en/latest/cabal-package.html#common-stanzas
common deps
  build-depends:
      base >=4.7 && <5,
      text,
      time 
  ghc-options: -Wall -fwarn-incomplete-patterns -fno-warn-name-shadowing
    -fwarn-unused-binds -fwarn-unused-imports
  default-language: Haskell2010
  default-extensions: 
    OverloadedStrings, 
    TemplateHaskell,
    ExistentialQuantification

library
  import: deps 
  exposed-modules:
      Lib
  other-modules:
      Paths_chap1
  hs-source-dirs:
      src

executable chap1-exe
  import: deps 
  main-is: Main.hs
  other-modules:
      Paths_chap1
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      chap1,

test-suite chap1-test
  import: deps 
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_chap1
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      chap1,
      tasty,
     tasty-hunit,
    tasty-quickcheck,
    quickcheck-text
