cabal-version: 1.12

name:           chap2
version:        0.1.0.0
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/chap2

library
  exposed-modules:
      Lib
  other-modules:
      Paths_chap2
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable chap2-exe
  main-is: Main.hs
  other-modules:
      Paths_chap2
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , chap2
  default-language: Haskell2010

test-suite chap2-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_chap2
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , chap2
  default-language: Haskell2010
