cabal-version: 2.2

name:           chap2
version:        0.1.0.0
build-type:     Simple

-- https://cabal.readthedocs.io/en/latest/cabal-package.html#common-stanzas
common deps
  build-depends:
      base >=4.7 && <5,
      text,
      time 
  ghc-options: -Wall -fwarn-incomplete-patterns -fno-warn-name-shadowing
    -fwarn-unused-binds -fwarn-unused-imports
  default-language: Haskell2010
  default-extensions: 

library
  import: deps 
  exposed-modules:
      Lib
  other-modules:
      Paths_chap2
  hs-source-dirs:
      src
  build-depends:

executable chap2-exe
  import: deps 
  main-is: Main.hs
  other-modules:
      Paths_chap2
  hs-source-dirs:
      app
  build-depends:
    , chap2

test-suite chap2-test
  import: deps 
  type: exitcode-stdio-1.0
  main-is: Drivers.hs
  other-modules:
      Paths_chap2
      Spec
      Spec2
  hs-source-dirs:
      test
  build-depends:
    chap2,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    tasty-discover
