cabal-version: 2.2
name:           chap3
version:        0.1.0.0
build-type:     Simple

common deps
  build-depends:
      base >=4.7 && <5,
      text,
      time 
  ghc-options: -fwarn-incomplete-patterns -fno-warn-name-shadowing
    -fwarn-unused-binds -fwarn-unused-imports
  default-language: Haskell2010
  default-extensions: 

library
  import: deps 
  exposed-modules:
      Lib
  other-modules:
      Paths_chap3
  hs-source-dirs:
      src

executable chap3-exe
  import: deps 
  main-is: Main.hs
  other-modules:
      Paths_chap3
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      chap3

test-suite chap3-test
  import: deps 
  type: exitcode-stdio-1.0
  main-is: Drivers.hs
  other-modules:
      Paths_chap3, Spec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      chap3,
      tasty,
      tasty-hunit,
      tasty-quickcheck,
      tasty-discover
