cabal-version: 3.0

name:           chap4
version:        0.1.0.0
build-type:     Simple

-- https://cabal.readthedocs.io/en/latest/cabal-package.html#common-stanzas
common deps
  build-depends:
      base >=4.7 && <5,
      text,
      time
  ghc-options: -Wall 
  default-language: Haskell2010
  default-extensions: 
    OverloadedStrings,
    --GeneralisedNewtypeDeriving

library
  import: deps 
  exposed-modules:
      Lib,
      User,
      Product
  other-modules:
      Paths_chap4
  hs-source-dirs:
      src

executable chap4-exe
  import: deps 
  main-is: Main.hs
  other-modules:
      Paths_chap4
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
     chap4

test-suite chap4-test
  import: deps 
  type: exitcode-stdio-1.0
  main-is: Drivers.hs
  other-modules:
      LibSpec,
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
     chap4,
     hspec,
     hspec-discover,
